Fix canvas shift (#186)

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -94,6 +94,7 @@ body {
 	grid-column: 2;
   grid-row: 2;
 	position: relative;
+	overflow: hidden;
 }
 
 #graph-canvas {
